# Instagram-Trend-Analysis

./: .gitignore  README.md  data_acquisition.py  pyproject.toml
notebooks/: backbone_table.csv  goodness_of_fit.ipynb
notebooks/anime/: 1_time_evolution.ipynb  2_original_aam.ipynb  3_modified_aam.ipynb  4_summary_statistics_flattened_temporal_network.ipynb  5_summary_statistics_temporal_network.ipynb  6_optimization.ipynb  7_detect_significant_ties.ipynb  8_investigate_backbone_gt.ipynb  8_investigate_backbone_nx.ipynb  8_summary_statistics_backbone.ipynb  9_goodness_of_fit.ipynb
notebooks/campaign/: 1_time_evolution.ipynb  2_original_aam.ipynb  3_modified_aam.ipynb  4_summary_statistics_flattened_temporal_network.ipynb  5_summary_statistics_temporal_network.ipynb  6_optimization.ipynb  7_detect_significant_ties.ipynb  8_investigate_backbone_gt.ipynb  8_investigate_backbone_nx.ipynb  8_summary_statistics_backbone.ipynb  9_goodness_of_fit.ipynb
notebooks/cheese/: 1_time_evolution.ipynb  2_original_aam.ipynb  3_modified_aam.ipynb  4_summary_statistics_flattened_temporal_network.ipynb  5_summary_statistics_temporal_network.ipynb  6_optimization.ipynb  7_detect_significant_ties.ipynb  8_investigate_backbone_gt.ipynb  8_investigate_backbone_nx.ipynb  8_summary_statistics_backbone.ipynb  9_goodness_of_fit.ipynb
notebooks/coordinate/: 1_time_evolution.ipynb  2_original_aam.ipynb  3_modified_aam.ipynb  4_summary_statistics_flattened_temporal_network.ipynb  5_summary_statistics_temporal_network.ipynb  6_optimization.ipynb  7_detect_significant_ties.ipynb  (+4 more)
(+125 files in other folders)
